[package]
name = "lyqdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
logos = "0.12.1"
rmp-serde = "1.1.1"
serde = { version = "1.0.152", features = ["derive"] }
shared = { path = "../shared" }